Create Account Screen

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,9 @@
     @apply text-lime-500;
   }
 }
+
+@layer components {
+  .primary-btn {
+    @apply w-full bg-lime-500 text-neutral-900 font-medium rounded-md text-center hover:bg-lime-400 transition-colors;
+  }
+}
