--- a/app/globals.css
+++ b/app/globals.css
@@ -4,12 +4,12 @@
 
 @layer base {
   a {
-    @apply text-lime-500;
+    @apply text-blue-500;
   }
 }
 
 @layer components {
   .primary-btn {
-    @apply w-full bg-lime-500 text-neutral-900 font-medium rounded-md text-center hover:bg-lime-400 transition-colors;
+    @apply w-full bg-blue-600 text-neutral-200 font-medium rounded-md text-center hover:bg-blue-500 transition-colors;
   }
 }
