Sign Up Page Styling with Input Button

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,12 +4,12 @@
 
 @layer base {
   a {
-    @apply text-blue-500;
+    @apply text-[#120A8F];
   }
 }
 
 @layer components {
   .primary-btn {
-    @apply w-full bg-blue-600 text-neutral-200 font-medium rounded-md text-center hover:bg-blue-500 transition-colors;
+    @apply w-full rounded-md bg-[#120A8F] text-center font-medium text-neutral-200 transition-colors hover:bg-[#00006A];
   }
 }
